PyMaker/datas/object2/RawHTML/i701/Python_DOC_referPages.how-can-i-use-if-else-in-list-comprehensions.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/11880430/how-to-write-inline-if-statement-for-print">How to write inline if statement for print?</a>
<span class="question-originals-answer-count">
                    13 answers
                </span>
</li>
<li>
<a dir="ltr" href="/questions/394809/does-python-have-a-ternary-conditional-operator">Does Python have a ternary conditional operator?</a>
<span class="question-originals-answer-count">
                    28 answers
                </span>
</li>
</ul>
</div>
<p>I'm trying to create a list with even numbers showing as they are and odd numbers showing as "odd".</p>
<p>Here is the code I am trying. </p>
<pre><code>lst = [if x % 2 == 0 else 'odd' for x in range(11)]
</code></pre>
<p>I expected to get something like this </p>
<pre><code>[0, "odd", 2, "odd", 4, "odd", 6, "odd", 8, "odd", 10]
</code></pre>
<p>But I keep getting <code>SyntaxError</code> exception:</p>
<pre><code>&gt;&gt;&gt; lst = [if x % 2 == 0 else 'odd' for x in range(11)]
  File "&lt;stdin&gt;", line 1
    lst = [if x % 2 == 0 else 'odd' for x in range(11)]
            ^
SyntaxError: invalid syntax
</code></pre>
<p>What am I doing wrong?</p>
</div>
<div class="post-text" itemprop="text">
<p>You are missing the <code>x</code> before <code>if</code>:</p>
<pre><code>lst = [x if x % 2 == 0 else 'odd' for x in range(11)]
</code></pre>
<p>The Python <a href="https://docs.python.org/3/reference/expressions.html#conditional-expressions" rel="noreferrer">conditional expression syntax</a> <em>has</em> to have both the 'true' and the 'false' expressions present, so <code>true_expr if condition else false_expr</code>, where one of <code>true_expr</code> or <code>false_expr</code> will be evaluated based on the truth value of the <code>condition</code> expression.</p>
<p>Demo:</p>
<pre><code>&gt;&gt;&gt; [x if x % 2 == 0 else 'odd' for x in range(11)]
[0, 'odd', 2, 'odd', 4, 'odd', 6, 'odd', 8, 'odd', 10]
</code></pre>
<p>Note that using a conditional expression <em>doesn't filter</em>, it always produces output. That's great for the per-iteration expression side of the list comprehenion syntax, but if you wanted to filter the input list and remove odd values altogether, then use a <code>if condition</code> test <em>after</em> the <code>for ... in ...</code> loop:</p>
<pre><code>&gt;&gt;&gt; [x for x in range(11) if x % 2 == 0]  # filtering, only even numbers
[0, 2, 4, 6, 8, 10]
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Is this what you wanted?</p>
<pre><code>[x if x % 2 == 0 else 'odd' for x in range(11)]
[0, 'odd', 2, 'odd', 4, 'odd', 6, 'odd', 8, 'odd', 10]
</code></pre>
<p>If that is the case you where simply missing something to return in the list comprehension, in this case you want to return <code>x</code> if the condition is satisfied.</p>
</div>
<div class="post-text" itemprop="text">
<pre class="lang-py prettyprint-override"><code>lst = [x if x % 2 == 0 else 'odd' for x in range(11)]
</code></pre>
<p>for more details regarding list comprehension and ternary operator, here the links:
<a href="https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/datastructures.html#list-comprehensions</a>
<a href="https://docs.python.org/3/faq/programming.html#is-there-an-equivalent-of-c-s-ternary-operator" rel="nofollow noreferrer">https://docs.python.org/3/faq/programming.html#is-there-an-equivalent-of-c-s-ternary-operator</a></p>
</div>
<div class="post-text" itemprop="text">
<p>You're missing the value that should be shown if the if statement is true</p>
<pre><code>[if x % 2 == 0 else 'odd' for x in range(11)]
</code></pre>
<p>should be </p>
<pre><code>[x if x % 2 == 0 else 'odd' for x in range(11)]
</code></pre>
</div>
